--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="./index.css">
+    <link type="image/png" sizes="16x16" rel="icon" href="./icons8-calculator-16.png">
 </head>
 
 <body>
